--- a/.gitignore
+++ b/.gitignore
@@ -1,10 +1,7 @@
-.env
-.terraform/
-coverage/
-venv/
-env/
-.DS_STORE
-.vscode
-*.code-workspace
-*.sha256
-terraform.tfstate
+node_modules/
+/test-results/
+/playwright-report/
+/blob-report/
+/playwright/.cache/
+
+playwright/.auth
