Adds fixtures and updates test

--- a/.env
+++ b/.env
@@ -1,1 +1,2 @@
 NSM_ASSESS_DEV_URL=https://nsmassessdev.apps.live.cloud-platform.service.justice.gov.uk/
+NSM_CLAIMS_DEV_URL=https://crm7dev.apps.live.cloud-platform.service.justice.gov.uk/
