--- a/package.json
+++ b/package.json
@@ -3,10 +3,6 @@
   "version": "1.0.0",
   "main": "index.js",
   "license": "MIT",
-  "devDependencies": {
-    "@playwright/test": "^1.40.1",
-    "@types/node": "^20.10.7"
-  },
   "scripts": {
     "e2e-test": "playwright test",
     "e2e-test:ui": "playwright test --ui",
@@ -14,6 +10,8 @@
     "e2e-test-record:provider": "playwright codegen https://crm7dev.apps.live.cloud-platform.service.justice.gov.uk/"
   },
   "dependencies": {
+    "@playwright/test": "^1.41.1",
+    "@types/node": "^20.10.7",
     "dotenv": "^16.3.1"
   }
 }
