--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -18,6 +18,9 @@ jobs:
       - aws-cli/setup:
           role_arn: $ECR_ROLE_TO_ASSUME # this will use the env var
           region: $ECR_REGION
+      - run:
+          name: Create project directory
+          command: mkdir -p /home/circleci/project
       - run: |
           # chmod +x ./.circleci/pull_image
           ./.circleci/pull_image nsm-crm7-claim
