--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -26,10 +26,13 @@ jobs:
           command: |
             echo $PATH
             set -x
-            curl -L "https://github.com/docker/compose/releases/download/2.24.5/docker-compose-$(uname -s)-$(uname -m)" -o /usr/local/bin/docker-compose
+            curl -L "https://github.com/docker/compose/releases/download/1.29.2/docker-compose-$(uname -s)-$(uname -m)" -o /usr/local/bin/docker-compose
+            if [ $? -ne 0 ]; then
+              echo "Failed to download Docker Compose"
+              exit 1
+            fi
             chmod +x /usr/local/bin/docker-compose
       - run: |
-          # chmod +x ./.circleci/pull_image
           ./.circleci/pull_image nsm-crm7-claim
 
       # Add other images (i.e. assess, appstore and claim) to pull
