--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -23,15 +23,12 @@ jobs:
           command: mkdir -p /home/circleci/project
       - run:
           name: Install Docker Compose
+          environment:
+            COMPOSE_VERSION: '1.29.2'
           command: |
-            echo $PATH
-            set -x
-            curl -L "https://github.com/docker/compose/releases/download/1.29.2/docker-compose-$(uname -s)-$(uname -m)" -o /usr/bin/docker-compose
-            if [ $? -ne 0 ]; then
-              echo "Failed to download Docker Compose"
-              exit 1
-            fi
-            chmod +x /usr/bin/docker-compose
+            curl -L "https://github.com/docker/compose/releases/download/${COMPOSE_VERSION}/docker-compose-$(uname -s)-$(uname -m)" -o ~/docker-compose
+            chmod +x ~/docker-compose
+            sudo mv ~/docker-compose /usr/local/bin/docker-compose
       - run: |
           ./.circleci/pull_image nsm-crm7-claim
 
