--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -22,12 +22,9 @@ jobs:
           environment:
             COMPOSE_VERSION: "1.29.2"
           command: |
-            # curl -L "https://github.com/docker/compose/releases/download/${COMPOSE_VERSION}/docker-compose-$(uname -s)-$(uname -m)" -o ~/docker-compose
-            # chmod +x ~/docker-compose
-            # mv ~/docker-compose /usr/local/bin/docker-compose
-            # ln -sf /usr/local/bin/docker-compose /usr/bin/docker-compose
-            curl -L "https://github.com/docker/compose/releases/download/${COMPOSE_VERSION}/docker-compose-$(uname -s)-$(uname -m)" -o /usr/local/bin/docker-compose
-            chmod +x /usr/local/bin/docker-compose
+            curl -L "https://github.com/docker/compose/releases/download/${COMPOSE_VERSION}/docker-compose-$(uname -s)-$(uname -m)" -o ~/docker-compose
+            chmod +x ~/docker-compose
+            mv ~/docker-compose /usr/local/bin/docker-compose
             ln -sf /usr/local/bin/docker-compose /usr/bin/docker-compose
       - setup_remote_docker
       - run: |
