--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -19,7 +19,8 @@ services:
     build: .
     container_name: nsm-e2e-tests
     environment:
-      - NSM_ASSESS_DEV_URL=http://nsm-crm7-claim:3000
+      - NSM_ASSESS_DEV_URL=https://nsmassessdev.apps.live.cloud-platform.service.justice.gov.uk/
+      - NSM_CLAIMS_DEV_URL_LOCAL=http://nsm-crm7-claim:3000
       - NSM_CLAIMS_DEV_URL=https://crm7dev.apps.live.cloud-platform.service.justice.gov.uk/
       - NSM_ASSESS_DEV_URL_LOCAL=https://nsmassessdev.apps.live.cloud-platform.service.justice.gov.uk/
     volumes:
@@ -32,8 +33,8 @@ services:
       - 3000:3000
     environment:
       - SECRET_KEY_BASE=needed_for_assets_precompile
-      - RAILS_ENV=test
-      - ENV=test
+      - RAILS_ENV=development
+      - ENV=development
       - SIDEKIQ_WEB_UI_USERNAME=sidekiq
       - SIDEKIQ_WEB_UI_PASSWORD=sidekiq
       - DATABASE_URL=postgresql://postgres:postgres@nsm-crm7-claim-db:5432/laa-claim-non-standard-magistrate-fee-test
@@ -41,18 +42,20 @@ services:
       - OMNIAUTH_TEST_MODE=true
     depends_on:
       - nsm-crm7-claim-db
-    command:
+    command: -wait tcp://nsm-crm7-claim-db:5432
+      -wait-retry-interval 10s
+      -timeout 180s
       - bash
       - -c
       - |
-        bin/rails db:prepare
+      bin/rails db:prepare
 
   nsm-crm7-claim-db:
     image: postgres:bullseye
     volumes:
       - ./tmp/pgdata:/var/lib/postgresql/data
     environment:
-      POSTGRES_DB: laa-claim-non-standard-magistrate-fee-test
+      POSTGRES_DB: laa-claim-non-standard-magistrate-fee-dev
       POSTGRES_USER: postgres
       POSTGRES_PASSWORD: postgres
     ports:
