Assess container added

--- a/docker-compose.local.yml
+++ b/docker-compose.local.yml
@@ -8,3 +8,5 @@ services:
     tty: true # docker run -t
   nsm-crm7-claim:
     build: https://github.com/ministryofjustice/laa-claim-non-standard-magistrate-fee-backend.git#main
+  nsm-crm7-assess:
+    build: https://github.com/ministryofjustice/laa-assess-non-standard-magistrate-fee#main
