--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -20,6 +20,12 @@ jobs:
           region: $ECR_REGION
       - run: |
           ./.circleci/pull_image nsm-crm7-claim
+      # Pull nsm assess image
+      - aws-cli/setup:
+          role_arn: $ASSESS_ECR_ROLE_TO_ASSUME # this will use the env var
+          region: $ECR_REGION
+      - run: |
+          ./.circleci/pull_image nsm-crm7-assess
 
       # Add other images (i.e. assess, appstore and claim) to pull
       - run:
