--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -24,8 +24,12 @@ jobs:
             ./.circleci/pull_image nsm-crm7-claim
       # Pull nsm assess image
       - aws-cli/setup:
-          role_arn: $ASSESS_ECR_ROLE_TO_ASSUME # this will use the env var
+          profile_name: nsm_e2e_test
           region: $ECR_REGION
+      - aws-cli/role_arn_setup:
+          profile_name: nsm_assess
+          role_arn: $ASSESS_ECR_ROLE_TO_ASSUME # this will use the env var
+          source_profile: nsm_e2e_test
       - run:
           name: Pull NSM Assess image
           command: |
