--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -21,6 +21,8 @@ jobs:
       - run:
           name: Pull NSM claim image
           command: |
+            echo "Pulling nsm-crm7-claim image"
+            echo "ARN: $CLAIM_ECR_ROLE_TO_ASSUME"
             ./.circleci/pull_image nsm-crm7-claim
       # Pull nsm assess image
       - aws-cli/setup:
@@ -29,6 +31,8 @@ jobs:
       - run:
           name: Pull NSM assess image
           command: |
+            echo "Pulling nsm-crm7-assess image"
+            echo "ARN: $ASSESS_ECR_ROLE_TO_ASSUME"
             ./.circleci/pull_image nsm-crm7-assess
       # Pull nsm appstore image
       - aws-cli/setup:
@@ -37,6 +41,8 @@ jobs:
       - run:
           name: Pull NSM appstore image
           command: |
+            echo "Pulling nsm-crm7-appstore image"
+            echo "ARN: $APPSTORE_ECR_ROLE_TO_ASSUME"
             ./.circleci/pull_image nsm-crm7-appstore
 
       # Add other images (i.e. assess, appstore and claim) to pull
