--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -5,6 +5,7 @@ version: 2.1
 # ------------------
 orbs:
   aws-cli: circleci/aws-cli@4.1.2
+  aws-ecr: circleci/aws-ecr@8.2.1
 
 jobs:
   run-e2e-tests:
@@ -18,7 +19,6 @@ jobs:
       - aws-cli/setup:
           role_arn: $CLAIM_ECR_ROLE_TO_ASSUME # this will use the env var
           region: $ECR_REGION
-          role-session-name: "nsm-claim"
       - run:
           name: Pull NSM claim image
           command: |
@@ -29,7 +29,6 @@ jobs:
       - aws-cli/setup:
           role_arn: $ASSESS_ECR_ROLE_TO_ASSUME
           region: $ECR_REGION
-          role-session-name: "nsm-assess"
       - run:
           name: Display ECR_REGION
           command: |
@@ -44,7 +43,6 @@ jobs:
       - aws-cli/setup:
           role_arn: $APPSTORE_ECR_ROLE_TO_ASSUME
           region: $ECR_REGION
-          role-session-name: "nsm-appstore"
       - run:
           name: Pull NSM appstore image
           command: |
