--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -10,10 +10,17 @@ services:
     image: jwilder/dockerize
     command: >
       -wait tcp://nsm-crm7-claim:3000
+      -wait tcp://nsm-crm7-assess:3000
+      -wait tcp://nsm-crm7-appstore:8000
       -wait-retry-interval 10s
       -timeout 180s
     depends_on:
+      - nsm-crm7-claim-db
+      - nsm-crm7-assess-db
+      - nsm-crm7-appstore-db
       - nsm-crm7-claim
+      - nsm-crm7-assess
+      - nsm-crm7-appstore
 
   nsm-e2e-tests:
     build: .
@@ -22,19 +29,57 @@ services:
       - NSM_ASSESS_DEV_URL=https://nsmassessdev.apps.live.cloud-platform.service.justice.gov.uk/
       - NSM_CLAIMS_DEV_URL_LOCAL=http://nsm-crm7-claim:3000
       - NSM_CLAIMS_DEV_URL=https://crm7dev.apps.live.cloud-platform.service.justice.gov.uk/
-      - NSM_ASSESS_DEV_URL_LOCAL=https://nsmassessdev.apps.live.cloud-platform.service.justice.gov.uk/
+      - NSM_ASSESS_DEV_URL_LOCAL=http://nsm-crm7-assess:3000
     volumes:
       - .:/e2e
       - ./data:/data
+
+  # NSM Database services
+
+  nsm-crm7-claim-db:
+    image: postgres:bullseye
+    volumes:
+      - ./tmp/pgdata/claim:/var/lib/data/claim
+    environment:
+      POSTGRES_DB: laa-claim-non-standard-magistrate-fee-dev
+      POSTGRES_USER: postgres
+      POSTGRES_PASSWORD: postgres
+    ports:
+      - 5432:5432
+
+  nsm-crm7-assess-db:
+    image: postgres:bullseye
+    volumes:
+      - ./tmp/pgdata/assess:/var/lib/data/assess
+    environment:
+      POSTGRES_DB: laa_assess_non_standard_magistrate_fee_dev
+      POSTGRES_USER: postgres
+      POSTGRES_PASSWORD: postgres
+    ports:
+      - 5433:5432
+
+  nsm-crm7-appstore-db:
+    image: postgres:bullseye
+    volumes:
+      - ./tmp/pgdata/appstore:/var/lib/data/appstore
+    environment:
+      POSTGRES_DB: laa_crime_application_store
+      POSTGRES_USER: postgres
+      POSTGRES_PASSWORD: postgres
+    ports:
+      - 5434:5432
+
   # NSM Claim service
+
   nsm-crm7-claim:
     image: ${LAA_CLAIM_IMAGE:-754256621582.dkr.ecr.eu-west-2.amazonaws.com/ministryofjustice/laa-claim-non-standard-magistrate-fee-dev-ecr:5996442cc161d38bf8289d14451856624f1e1605}
     ports:
-      - 3000:3000
+      - 3001:3000
     environment:
       - SECRET_KEY_BASE=needed_for_assets_precompile
       - RAILS_ENV=development
       - ENV=development
+      - APP_STORE_URL=http://nsm-crm7-appstore:8000
       - SIDEKIQ_WEB_UI_USERNAME=sidekiq
       - SIDEKIQ_WEB_UI_PASSWORD=sidekiq
       - DATABASE_URL=postgresql://postgres:postgres@nsm-crm7-claim-db:5432/laa-claim-non-standard-magistrate-fee-dev
@@ -50,21 +95,12 @@ services:
       - |
       bin/rails db:prepare
 
-  nsm-crm7-claim-db:
-    image: postgres:bullseye
-    volumes:
-      - ./tmp/pgdata:/var/lib/postgresql/data
-    environment:
-      POSTGRES_DB: laa-claim-non-standard-magistrate-fee-dev
-      POSTGRES_USER: postgres
-      POSTGRES_PASSWORD: postgres
-    ports:
-      - 5432:5432
   # NSM Assess service
+
   nsm-crm7-assess:
     image: ${LAA_CLAIM_IMAGE:-754256621582.dkr.ecr.eu-west-2.amazonaws.com/crm7team/laa-assess-non-standard-magistrate-fee-dev:1a1e3d5233d359bf2bb18882958b32c28faeab7b}
     ports:
-      - 3000:3000
+      - 3002:3000
     environment:
       - SECRET_KEY_BASE=needed_for_assets_precompile
       - RAILS_ENV=development
@@ -77,7 +113,10 @@ services:
       - OMNIAUTH_AZURE_CLIENT_SECRET=''
       - OMNIAUTH_AZURE_REDIRECT_URI=''
       - OMNIAUTH_AZURE_TENANT_ID=''
-      - APP_STORE_URL=''
+      - APP_STORE_URL=http://nsm-crm7-appstore:8000
+      - APP_STORE_CLIENT_ID=
+      - APP_STORE_TENANT_ID=
+      - APP_STORE_CLIENT_SECRET=
       - DEV_AUTH_ENABLED=true
     depends_on:
       - nsm-crm7-assess-db
@@ -89,18 +128,20 @@ services:
       - |
       bin/rails db:prepare
 
-  nsm-crm7-assess-db:
-    image: postgres:bullseye
-    volumes:
-      - ./tmp/pgdata:/var/lib/postgresql/data
-    environment:
-      POSTGRES_DB: laa-claim-non-standard-magistrate-fee-dev
-      POSTGRES_USER: postgres
-      POSTGRES_PASSWORD: postgres
-    ports:
-      - 5432:5432
   # NSM Application Store service
+
   nsm-crm7-appstore:
     image: ${LAA_CLAIM_IMAGE:-754256621582.dkr.ecr.eu-west-2.amazonaws.com/crm7team/laa-crime-application-store-dev:1ce881606ef4bc3d9198962ff6eec73efc760e34}
+    environment:
+      - APP_CLIENT_ID=9da94846-a054-4713-8b2e-e44f47541db5
+      - TENANT_ID=c6874728-71e6-41fe-a9e1-2e8c36776ad8
+      - APP_CLIENT_SECRET=DE~8Q~mOz~9saY0VKMTyRudISl7f7gi-dzf8Ubie
+      - POSTGRES_USERNAME=postgres
+      - POSTGRES_PASSWORD=postgres
+      - POSTGRES_HOSTNAME=localhost
+      - POSTGRES_NAME=laa_crime_application_store
+      - DATABASE_URL=postgresql://postgres:postgres@nsm-crm7-appstore-db:5432/laa_crime_application_store
+    depends_on:
+      - nsm-crm7-appstore-db
     ports:
-      - 3000:3000
+      - 8000:8000
