--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -5,73 +5,64 @@
 # sets some environment variables, and mounts two volumes.
 
 version: "3.9"
+networks:
+  app_net:
+    ipam:
+      config:
+        - subnet: 172.20.0.0/16
 services:
   start_applications:
+    container_name: start_applications
     image: jwilder/dockerize
     command: >
+      -wait tcp://nsm-db-services:5432
       -wait tcp://nsm-crm7-claim:3000
       -wait tcp://nsm-crm7-assess:3000
       -wait tcp://nsm-crm7-appstore:8000
       -wait-retry-interval 10s
       -timeout 180s
     depends_on:
-      - nsm-crm7-claim-db
-      - nsm-crm7-assess-db
-      - nsm-crm7-appstore-db
+      - nsm-db-services
       - nsm-crm7-claim
       - nsm-crm7-assess
       - nsm-crm7-appstore
 
-  nsm-e2e-tests:
+  laa-crime-forms-end-to-end-tests:
+    container_name: laa-crime-forms-end-to-end-tests
     build: .
-    container_name: nsm-e2e-tests
     environment:
-      - NSM_ASSESS_DEV_URL=https://nsmassessdev.apps.live.cloud-platform.service.justice.gov.uk/
-      - NSM_CLAIMS_DEV_URL_LOCAL=http://nsm-crm7-claim:3000
-      - NSM_CLAIMS_DEV_URL=https://crm7dev.apps.live.cloud-platform.service.justice.gov.uk/
-      - NSM_ASSESS_DEV_URL_LOCAL=http://nsm-crm7-assess:3000
+      - NSM_ASSESS_DEV_URL=${NSM_ASSESS_DEV_URL}
+      - NSM_CLAIMS_DEV_URL=${NSM_CLAIMS_DEV_URL}
     volumes:
       - .:/e2e
       - ./data:/data
+    depends_on:
+      - nsm-db-services
+      - nsm-crm7-assess
+    networks:
+      - app_net
 
   # NSM Database services
 
-  nsm-crm7-claim-db:
+  nsm-db-services:
+    container_name: nsm-db-services
     image: postgres:bullseye
     volumes:
-      - ./tmp/pgdata/claim:/var/lib/data/claim
+      - ./tmp/pgdata:/var/lib/data
+      - ./init-db.sql:/docker-entrypoint-initdb.d/init-db.sql
     environment:
-      POSTGRES_DB: laa-claim-non-standard-magistrate-fee-dev
       POSTGRES_USER: postgres
       POSTGRES_PASSWORD: postgres
     ports:
       - 5432:5432
-
-  nsm-crm7-assess-db:
-    image: postgres:bullseye
-    volumes:
-      - ./tmp/pgdata/assess:/var/lib/data/assess
-    environment:
-      POSTGRES_DB: laa_assess_non_standard_magistrate_fee_dev
-      POSTGRES_USER: postgres
-      POSTGRES_PASSWORD: postgres
-    ports:
-      - 5433:5432
-
-  nsm-crm7-appstore-db:
-    image: postgres:bullseye
-    volumes:
-      - ./tmp/pgdata/appstore:/var/lib/data/appstore
-    environment:
-      POSTGRES_DB: laa_crime_application_store
-      POSTGRES_USER: postgres
-      POSTGRES_PASSWORD: postgres
-    ports:
-      - 5434:5432
+    networks:
+      app_net:
+        ipv4_address: 172.20.1.10
 
   # NSM Claim service
 
   nsm-crm7-claim:
+    container_name: nsm-crm7-claim
     image: ${LAA_CLAIM_IMAGE:-754256621582.dkr.ecr.eu-west-2.amazonaws.com/ministryofjustice/laa-claim-non-standard-magistrate-fee-dev-ecr:5996442cc161d38bf8289d14451856624f1e1605}
     ports:
       - 3001:3000
@@ -82,23 +73,22 @@ services:
       - APP_STORE_URL=http://nsm-crm7-appstore:8000
       - SIDEKIQ_WEB_UI_USERNAME=sidekiq
       - SIDEKIQ_WEB_UI_PASSWORD=sidekiq
-      - DATABASE_URL=postgresql://postgres:postgres@nsm-crm7-claim-db:5432/laa-claim-non-standard-magistrate-fee-dev
+      - DATABASE_URL=postgresql://postgres:postgres@nsm-db-services:5432/laa-claim-non-standard-magistrate-fee-dev
       - LAA_PORTAL_IDP_METADATA_FILE=config/laa_portal/metadata/samlmock.xml
       - OMNIAUTH_TEST_MODE=true
     depends_on:
-      - nsm-crm7-claim-db
-    command: -wait tcp://nsm-crm7-claim-db:5432
-      -wait-retry-interval 10s
-      -timeout 180s
-      - bash
-      - -c
-      - |
+      - nsm-db-services
+    command: |
       bin/rails db:prepare
+    networks:
+      app_net:
+        ipv4_address: 172.20.1.1
 
   # NSM Assess service
 
   nsm-crm7-assess:
-    image: ${LAA_CLAIM_IMAGE:-754256621582.dkr.ecr.eu-west-2.amazonaws.com/crm7team/laa-assess-non-standard-magistrate-fee-dev:1a1e3d5233d359bf2bb18882958b32c28faeab7b}
+    container_name: nsm-crm7-assess
+    image: ${LAA_CLAIM_IMAGE:-754256621582.dkr.ecr.eu-west-2.amazonaws.com/crm7team/laa-assess-non-standard-magistrate-fee-dev:latest}
     ports:
       - 3002:3000
     environment:
@@ -107,7 +97,7 @@ services:
       - ENV=development
       - SIDEKIQ_WEB_UI_USERNAME=sidekiq
       - SIDEKIQ_WEB_UI_PASSWORD=sidekiq
-      - DATABASE_URL=postgresql://postgres:postgres@nsm-crm7-assess-db:5432/laa_assess_non_standard_magistrate_fee_dev
+      - DATABASE_URL=postgresql://postgres:postgres@nsm-db-services:5432/laa_assess_non_standard_magistrate_fee_dev
       - OMNIAUTH_TEST_MODE=true
       - OMNIAUTH_AZURE_CLIENT_ID=''
       - OMNIAUTH_AZURE_CLIENT_SECRET=''
@@ -119,26 +109,28 @@ services:
       - APP_STORE_CLIENT_SECRET=
       - DEV_AUTH_ENABLED=true
     depends_on:
-      - nsm-crm7-assess-db
-    command: -wait tcp://nsm-crm7-assess-db:5432
-      -wait-retry-interval 10s
-      -timeout 180s
-      - bash
-      - -c
-      - |
+      - nsm-db-services
+    command: |
       bin/rails db:prepare
+    networks:
+      app_net:
+        ipv4_address: 172.20.1.2
 
   # NSM Application Store service
 
   nsm-crm7-appstore:
+    container_name: nsm-crm7-appstore
     image: ${LAA_CLAIM_IMAGE:-754256621582.dkr.ecr.eu-west-2.amazonaws.com/crm7team/laa-crime-application-store-dev:1ce881606ef4bc3d9198962ff6eec73efc760e34}
     environment:
       - POSTGRES_USERNAME=postgres
       - POSTGRES_PASSWORD=postgres
       - POSTGRES_HOSTNAME=localhost
       - POSTGRES_NAME=laa_crime_application_store
-      - DATABASE_URL=postgresql://postgres:postgres@nsm-crm7-appstore-db:5432/laa_crime_application_store
+      - DATABASE_URL=postgresql://postgres:postgres@nsm-db-services:5432/laa_crime_application_store
     depends_on:
-      - nsm-crm7-appstore-db
+      - nsm-db-services
     ports:
       - 8000:8000
+    networks:
+      app_net:
+        ipv4_address: 172.20.1.3
