--- a/.env
+++ b/.env
@@ -1,2 +1,2 @@
-NSM_ASSESS_DEV_URL=https://nsmassessdev.apps.live.cloud-platform.service.justice.gov.uk/
-NSM_CLAIMS_DEV_URL=https://crm7dev.apps.live.cloud-platform.service.justice.gov.uk/
+NSM_CLAIMS_DEV_URL=http://nsm-crm7-claim:3000
+NSM_ASSESS_DEV_URL=http://172.20.1.2:3000
